Desktop design done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton&effect=fire" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Hello World !</h1>
+    <div class="nav-sec">
+        <ul class="nav-bar clearfix">
+            <li><a href="">About</a></li>
+            <li><a href="">Work</a></li>
+            <li><a href="">Protfolio</a></li>
+            <li><a href="">Contac</a></li>
+        </ul>
+
+    </div>
+
+    <div class="persional-info clearfix">
+        <div class="row ">
+            <section class="text-part col-half">
+                <h1 id="hello">HELLO, I'M</h1>
+                <h1 id="name">UZZAL AHMED</h1>
+                <p>A full stack allaround designer that placerat <br> in massa consectetur!</p>
+                <button>Hire Me</button>
+            </section>
+
+            <section class="col-half">
+                <img class="image" src="images/do not use this pic.png" alt="">
+            </section>
+
+        </div>
+    </div>
+
+    <!--About Section-->
+
+    <div class="about clearfix">
+        <div class="row">
+            <section class="col-half">
+                <img class=" image" src="images/do not use this pic2.png" alt="Do not use this pic">
+            </section>
+            <section class="col-half text-part">
+                <h1 id="hello">About</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error accusamus molestiae omnis labore
+                    architecto, a modi ipsa aut tempore impedit. Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Mollitia explicabo unde eos nisi repellendus dolorem sunt magnam ad nihil quo.</p>
+                <button> <i class="fa fa-download"></i> Download CV</button>
+            </section>
+        </div>
+    </div>
+    <!-- Latest Work Section-->
+
+
+
+    <div class="latest_work clearfix">
+        <section class="title">
+            <h1 id="hello"><span id="name">LATEST</span> WORKING PROJECT </h1>
+        </section>
+        <section class="work-section">
+            <div class="work"><img src="images/image 4.png" alt="">
+                <h1>Power x-gym(Gym Website)</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, esse!</p>
+            </div>
+            <div class="work">
+                <img src="images/image 5.png" alt="">
+                <h1>Creative Agency</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur, optio.</p>
+            </div>
+            <div class="work"><img clar src="images/image 8.png" alt="">
+                <h1>Hard Rock Music</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur, optio.</p>
+            </div>
+        </section>
+    </div>
+    <!---third one-->
+    <div class="work-inq clearfix">
+        <div class="col-1">
+            <h1 id="inquiry">WORK INQUIRY</h1>
+        </div>
+        <div class="col-2">
+            <button id="last-btn">Let's Chat</button>
+        </div>
+    </div>
+    <!--footer-->
+    <footer>
+
+        <div class="footer-part">
+            <section>
+                <h2 style="color: gray;">Stay Connected</h2>
+                <h1 >uzzalahmed0001@gmail.com</h1>
+            </section>
+            <section class="social">
+                <a href="#"><img src="icons/Group 33059.png" alt=""></a>
+                <a href="#"> <img src="icons/image 6.png" alt=""></a>
+                <a href="#"> <img src="icons/image 7.png" alt=""></a>
+            </section>
+        </div>
+
+
+    </footer>
 </body>
+
 </html>
